--- a/www/web/index.html
+++ b/www/web/index.html
@@ -4,7 +4,7 @@
 		<title>Custom List Sample</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+		<link href="bootstrap.min.css" rel="stylesheet">
 		<link rel="import" href="packages/custom_list/main-app.html">
 		<script type="application/dart">export 'package:polymer/init.dart';</script>
 		<script src="packages/browser/dart.js"></script>
