--- a/platforms/android/assets/www/web/index.html
+++ b/platforms/android/assets/www/web/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="bootstrap.min.css" rel="stylesheet">
 		<link rel="import" href="packages/custom_list/main-app.html">
+		<script src="packages/browser/interop.js"></script>
 		<script type="application/dart">export 'package:polymer/init.dart';</script>
 		<script src="packages/browser/dart.js"></script>
 	</head>
